--- a/index.html
+++ b/index.html
@@ -3,17 +3,37 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Etch-a-Sketch</title>
+        <script src="https://kit.fontawesome.com/13dd61c5f0.js" crossorigin="anonymous"></script>
+        <title>Etch-a-Sketch</title>    
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1 class="title">Etch-a-sketch</h1>
         </header>
         
+       <div class="gridpanel">
+           <p> </p>
+           <button id="rainbow">Rainbow</button>
+           <button id="black">Black</button>
+           <button id="erase">Erase</button>
+           <button id="clear">Clear</button>
+           <button id="remove">Remove lines</button>
+       </div>
+    
+
         <div class="wrap">
         <div id="container" class="container"></div>
         </div>
+
+        <footer>
+            Copyright © 2021 Laura<a href="https://github.com/Lauraa1003"target="_blank"><i class="fab fa-github"></i></a>
+           </footer>
         <script src="script.js"></script>
     </body>
 </html>
