--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/13dd61c5f0.js" crossorigin="anonymous"></script>
         <title>Etch-a-Sketch</title>    
-        <link rel="icon" type="image/x-icon" href="/images/brush.ico">
+        <link rel="icon" type="image/x-icon" href="brush.ico">
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap" rel="stylesheet">
