--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
            <button onclick="playSound()" id="black">Black</button>
            <button onclick="playSound()" id="erase">Erase</button>
            <button onclick="playSound()" id="clear">Clear</button>
-           <button onclick="playSound(); removeLines()" id="remove">Remove lines</button>
+           <button onclick="playSound(); removeLines(); toggleBorder()" id="remove">Remove lines</button>
        </div>
     
     <audio id="sound" src="sounds/mixkit-game-ball-tap-2073.wav"></audio>
