--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <footer>
-            Copyright © 2022 Laura<a href="https://github.com/Lauraa1003"target="_blank"><i class="fab fa-github"></i></a>
+            Copyright © 2022 Lauraa1003<a href="https://github.com/Lauraa1003"target="_blank"><i class="fab fa-github"></i></a>
            </footer>
         <script src="script.js"></script>
     </body>
