--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
         
        <div class="gridpanel">
-             <div class="slidecontainer">
-                 <p id="size">Choose size  16 x 16</p>
-             <input type="range" min="1" max="64" value="16" class="slider" id="myRange">
+             <div class="rangeslider">
+                 <p id="size"> Choose size  </p>
+             <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
           </div>
         
            <button onclick="playSound()" id="rainbow">Rainbow</button>
