grid panel button

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
         
        <div class="gridpanel">
              <div class="rangeslider">
-                 <p id="size"> Choose size  </p>
-             <input type="range" min="1" max="100" value="16" class="slider" id="myRange">
+                 <p id="size"> Grid size: 16 X 16 </p>
+                <!-- <button type="button" onclick="gridSize()">Choose this size</button>-->
+             <input type="range" min="1" max="50" value="16" class="slider" id="myRange">
           </div>
         
            <button onclick="playSound()" id="rainbow">Rainbow</button>
